# vulkan-renderer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  vulkan-renderer.sln  vulkan_renderer.cbp
vulkan-renderer/: BUILD_OPTIONS.h  Camera.hpp  Context.cpp  Context.h  Drawable.cpp  Drawable.h  Framebuffer.cpp  Framebuffer.h  GLFWWindow.cpp  ModelLoader.cpp  ModelLoader.h  MyAnimation.cpp  MyAnimation.h  MyGui.cpp  MyGui.h  MyImage.cpp  MyImage.h  MyMaterial.cpp  MyMaterial.h  MyMesh.cpp  MyMesh.h  MyNode.cpp  MyNode.h  MyScene.cpp  MyScene.h  MyTexture.cpp  MyTexture.h  Platform.h  RenderNode.cpp  RenderNode.h  RenderQueue.cpp  RenderQueue.h  RenderQueueManager.cpp  RenderQueueManager.h  RenderScene.cpp  RenderScene.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  (+19 more)
vulkan-renderer/Camera/: MyCamera.cpp  MyCamera.h
vulkan-renderer/Debug/: Axis.cpp  Axis.h
vulkan-renderer/PostEffect/: Bloom.cpp  Bloom.h  PostEffect.cpp  PostEffect.h  ToneMapping.cpp  ToneMapping.h
vulkan-renderer/RenderScene/: RenderQueue.cpp  RenderQueue.h  RenderQueueManager.cpp  RenderQueueManager.h  RenderScene.cpp  RenderScene.h  RenderSceneDeferred.cpp  RenderSceneDeferred.h  RenderSceneForward.cpp  RenderSceneForward.h
vulkan-renderer/Shaders/: basic.frag  basic.vert  blit.frag  blitEnvmap.frag  brightness.frag  build.bat  deferred.frag  depth.frag  gBuffer.frag  gaussianBlur.frag  irradianceMap.frag  pbr.frag  pbr.vert  plain.frag  prefilteredCubeMap.frag  prefilteredCubeMap.vert  quad.vert  skybox.frag  skybox.vert
vulkan-renderer/ShadowMap/: ShadowCamera.cpp  ShadowCamera.h  ShadowMap.cpp  ShadowMap.h
vulkan-renderer/Vulkan/: DecriptorSet.cpp  DecriptorSet.h  GraphicsPipeline.cpp  GraphicsPipeline.h  InputBinding.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  PiplelineManager.h  RenderPass.cpp  RenderPass.h  ShaderModule.cpp  ShaderModule.h  VulkanRenderer.cpp  VulkanRenderer.h
